hoan thanh yeu cau st5